Working on quest system